[package]
name = "quickshot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ashpd = { version = "0.9.1", features = ["tokio"], default-features = false }
clap = { version = "4.5.6", features = ["std", "help", "usage", "error-context", "suggestions"], default-features = false }
clap_mangen = "0.2.22"
tokio = { version = "1.38.1", features = ["io-std", "macros"] }
