[package]
name = "quickshot"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause"
description = "A simple xdg-desktop-portal based screenshot tool"
repository = "https://github.com/Kl4rry/Quickshot"
homepage = "https://github.com/Kl4rry/Quickshot"
docs = "https://github.com/Kl4rry/Quickshot"
authors = ["Axel Kappel"]

[dependencies]
anyhow = "1.0.86"
ashpd = { version = "0.9.1", features = ["tokio"], default-features = false }
clap = { version = "4.5.6", features = ["std", "help", "usage", "error-context", "suggestions"], default-features = false }
clap_mangen = "0.2.22"
tokio = { version = "1.38.1", features = ["io-std", "macros"] }
